--- a/tex/tesis.bib
+++ b/tex/tesis.bib
@@ -222,6 +222,26 @@
 	url = {https://support.numxl.com/hc/es/articles/215959443-MAPE-Error-medio-de-porcentaje-absoluto}
 }
 
+@misc{rnn_ed_azure,
+	author = {Azure},
+	title = {{DeepLearningForTimeSeriesForecasting}},
+	journal = {GitHub},
+	year = {2021},
+	month = {Mar},
+	note = {[Online; accessed 29. Mar. 2021]},
+	url = {https://github.com/Azure/DeepLearningForTimeSeriesForecasting/blob/master/3_RNN_encoder_decoder.ipynb}
+}
+
+@misc{rnn_azure,
+	author = {Azure},
+	title = {{DeepLearningForTimeSeriesForecasting}},
+	journal = {GitHub},
+	year = {2021},
+	month = {Mar},
+	note = {[Online; accessed 29. Mar. 2021]},
+	url = {https://github.com/Azure/DeepLearningForTimeSeriesForecasting/blob/master/2_RNN.ipynb}
+}
+
 @misc{callbacks,
 	author = {Team, Keras},
 	title = {{Keras documentation: Callbacks API}},
